--- a/css/common.css
+++ b/css/common.css
@@ -2,7 +2,7 @@
   --primary-text-color: #757575;
   --tittle-text-color: #212121;
   --accent-color: #2196f3;
-  --secondary-text-color: ##ff0000;
+  --secondary-text-color: ##ffffff;
   --background-color: #2f303a;
   --unique-color: rgba(255, 255, 255, 0.6);
   --unique-background-color: #f5f4fa;
