--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ body {
   font-size: 16px;
   line-height: 0.5;
   font-weight: 700;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
   border: none;
@@ -189,7 +189,7 @@ body {
   color: var(--tittle-text-color);
   background-color: var(--unique-background-color);
   border: none;
-  font-family: "Roboto", sans-serif;
+  font-family: inherit;
   font-size: 16px;
   line-height: 0.6;
   font-weight: 500;
