--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --accent-color: #2196f3;
   --secondary-text-color: #ffffff;
   --background-color: #2f303a;
+  --button-background-color: #188CE8;
   --unique-color: rgba(255, 255, 255, 0.6);
   --unique-background-color: #f5f4fa;
 }
@@ -90,6 +91,11 @@ body {
   font-weight: 900;
   color: var(--secondary-text-color);
   text-transform: uppercase;
+}
+
+.button:hover,
+.button:focus {
+ background-color: var(--button-background-color);
 }
 
 .button {
