--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
   --accent-color: #2196f3;
   --secondary-text-color: #ffffff;
   --background-color: #2f303a;
-  --button-background-color: #188CE8;
+  --button-background-color: #188ce8;
   --unique-color: rgba(255, 255, 255, 0.6);
   --unique-background-color: #f5f4fa;
 }
@@ -95,7 +95,7 @@ body {
 
 .button:hover,
 .button:focus {
- background-color: var(--button-background-color);
+  background-color: var(--button-background-color);
 }
 
 .button {
@@ -195,6 +195,7 @@ body.buttons {
 }
 
 .buttons {
+  font-family: inherit;
   color: var(--tittle-text-color);
   background-color: var(--unique-background-color);
   border: none;
@@ -205,7 +206,8 @@ body.buttons {
 }
 
 .buttons:hover,
-.buttons:focus {
+.buttons:focus,
+.filtres .current {
   color: var(--secondary-text-color);
   background-color: var(--accent-color);
 }
